--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<h3 class="big-title">Dependency Injection Angular</h3>
+<h3 class="big-title">Angular Dependency Injection</h3>
 
 <resolution-modifier></resolution-modifier>
