--- a/src/styles.css
+++ b/src/styles.css
@@ -22,7 +22,7 @@ body {
 table {
   border-collapse: collapse;
   width: 100%;
-  overflow-x: scroll ;
+  overflow-x: scroll;
 }
 
 table thead {
@@ -39,6 +39,8 @@ table td:last-child {
 table thead,
 table td {
   min-width: 150px;
+  line-height: 1.5;
+
   border: 1px solid #ddd;
   padding: 0.5rem;
 }
