--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <h3 class="big-title">Angular Dependency Injection</h3>
 
 <resolution-modifier></resolution-modifier>
+<div appParent>
+  <div appChild></div>
+</div>
