--- a/src/styles.css
+++ b/src/styles.css
@@ -19,6 +19,15 @@ body {
   border: 1px solid royalblue;
 }
 
+.bg-code {
+  display: inline-block;
+  padding: 0.5rem;
+  margin: 0.5rem 0;
+
+  background-color: #e5e5e5;
+  border-radius: 0.25rem;
+}
+
 table {
   border-collapse: collapse;
   width: 100%;
@@ -39,8 +48,12 @@ table td:last-child {
 table thead,
 table td {
   min-width: 150px;
-  line-height: 1.5;
 
   border: 1px solid #ddd;
   padding: 0.5rem;
+}
+
+#detection {
+  vertical-align: baseline;
+  line-height: 2;
 }
