--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <h3 class="big-title">Angular Dependency Injection</h3>
 
-<a routerLink="/resolution-modifier">1. Resolution Modifier</a>
 <div appParent>
   <div appChild></div>
 </div>
+<router-outlet></router-outlet>
