add toolbar, config route css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <h3 class="big-title">Angular Dependency Injection</h3>
-
+<app-toolbar></app-toolbar>
 <div appParent>
   <div appChild></div>
 </div>
