--- a/src/app/resolution-modifiers/resolution-modifiers.component.html
+++ b/src/app/resolution-modifiers/resolution-modifiers.component.html
@@ -122,8 +122,7 @@
           <br />
           <div class="bg-code">
             <code>
-              <b>@Optional() @Self()</b> private logger: LoggerService</code
-            >
+              <b>@Optional() @Self()</b> private logger: LoggerService</code>
           </div>
         </div>
       </td>
@@ -136,7 +135,7 @@
     <tr>
       <td>
         <div>
-          add providers in parent.directive.ts:
+          as above, and add providers in parent.directive.ts:
           <br />
           <div class="bg-code">
             <code> <b>providers</b> [LoggerService] </code>
