--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 
-body {
+body,
+button {
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
 }
@@ -8,6 +9,7 @@ body {
 .big-title {
   text-transform: uppercase;
   letter-spacing: 0.5px;
+  color: tomato;
 }
 
 .title {
