move directive into RM

--- a/src/app/resolution-modifiers/resolution-modifiers.component.html
+++ b/src/app/resolution-modifiers/resolution-modifiers.component.html
@@ -111,14 +111,14 @@
           </div>
         </div>
         <div>
-          child.directive.ts:
+          child.directive.ts (it will work normally without parent directive):
           <br />
           <div class="bg-code">
             <code> <b>@Host()</b> private parentLogger: LoggerService </code>
           </div>
         </div>
         <div>
-          parent.directive.ts:
+          parent.directive.ts
           <br />
           <div class="bg-code">
             <code>
@@ -154,3 +154,8 @@
     </tr>
   </tbody>
 </table>
+
+<!-- @Host -->
+<!-- <div appParent>
+  <div appChild></div>
+</div> -->
