--- a/src/app/resolution-modifiers/resolution-modifiers.component.html
+++ b/src/app/resolution-modifiers/resolution-modifiers.component.html
@@ -4,11 +4,18 @@
     <td></td>
     <td>
       <span style="color: red">LoggerService</span>
-      <span style="display: block">log: (message: string) => void</span>
+      <br/>
+      <div class="bg-code">
+        <code>log: (message: string) => void</code>
+      </div>
     </td>
     <td>
       <span style="color: red">AppComponent</span>
-      <span style="display: block">if logger => logger.log('...')</span>
+      <br/>
+      in constructor
+      <div class="bg-code ml-1">
+        <code>if logger => logger.log('...')</code>
+      </div>
     </td>
     <td>Detection</td>
     <td>App build</td>
