--- a/src/styles.css
+++ b/src/styles.css
@@ -59,3 +59,15 @@ table td {
   vertical-align: baseline;
   line-height: 2;
 }
+
+.ml-1 {
+  margin-left: 0.5rem;
+}
+
+.mr-1 {
+  margin-right: 0.5rem;
+}
+
+.mx-1 {
+  margin: 0 0.5rem;
+}
