Create new components (View Providers)

--- a/src/app/toolbar/toolbar.component.html
+++ b/src/app/toolbar/toolbar.component.html
@@ -1,4 +1,5 @@
 <div class="menu">
   <button class="item" routerLinkActive="active" routerLink="resolution-modifiers">Resolution Modifiers</button>
   <button class="item" routerLinkActive="active" routerLink="providers">Providers</button>
+  <button class="item" routerLinkActive="active" routerLink="gallery">View Providers</button>
 </div>
